header overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
     box-sizing: border-box;
 }
 
-body{
-    overflow-x: hidden;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -25,13 +21,8 @@ html {
 }
 
 body {
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     background-color: var(--background-color);
     color: var(--text-color);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .content {
@@ -249,7 +240,7 @@ body {
 }
 
 .card-project:hover {
-    background-color: teal;
+    background-color:teal;
 }
 
 .card-project:hover .content-project {
@@ -322,7 +313,7 @@ body {
 }
 
 @media(max-width:768px) {
-
+   
     .details {
         text-align: center;
     }
